--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -102,25 +102,25 @@ upload:
   local:
     url: https://static.example.com/
     path: /usr/local/upload/
-  # oss存储
-  oss:
-    url: https://your-bucket.oss-region.aliyuncs.com/
-    endpoint: oss-region.aliyuncs.com
-    bucketName: <OSS_BUCKET>
-    accessKeyId: <OSS_KEY_ID>
-    accesskeySecret: <OSS_SECRET>
-  cos:
-    url: https://your-bucket.cos.region.myqcloud.com/
-    secretId: <COS_ID>
-    secretKey: <COS_KEY>
-    region: <COS_REGION>
-    bucketName: <COS_BUCKET>
-  qiniu:
-    url: https://Bucket域名/  # 访问域名(给存储桶绑定的二级域名)
-    bucketName: 空间名称bucketName # 空间名称bucketName
-    region: qiniu配置region # 存储区域 华南(huanan) 华北(huabei)...
-    accessKey: qiniu配置accessKey  #accessKey
-    secretKey: qiniu配置secretKey  #secretKey
+#  # oss存储
+#  oss:
+#    url: https://your-bucket.oss-region.aliyuncs.com/
+#    endpoint: oss-region.aliyuncs.com
+#    bucketName: <OSS_BUCKET>
+#    accessKeyId: <OSS_KEY_ID>
+#    accesskeySecret: <OSS_SECRET>
+#  cos:
+#    url: https://your-bucket.cos.region.myqcloud.com/
+#    secretId: <COS_ID>
+#    secretKey: <COS_KEY>
+#    region: <COS_REGION>
+#    bucketName: <COS_BUCKET>
+#  qiniu:
+#    url: https://Bucket域名/  # 访问域名(给存储桶绑定的二级域名)
+#    bucketName: 空间名称bucketName # 空间名称bucketName
+#    region: qiniu配置region # 存储区域 华南(huanan) 华北(huabei)...
+#    accessKey: qiniu配置accessKey  #accessKey
+#    secretKey: qiniu配置secretKey  #secretKey
 # mybatisPlus配置
 mybatis-plus:
   # mapper映射地址
@@ -175,27 +175,27 @@ sa-token:
   # 是否输出操作日志
   is-log: false
 # 第三方登录
-oauth:
-  gitee:
-    client-id: <GITEE_CLIENT_ID>
-    client-secret: <GITEE_SECRET>
-    grant_type: authorization_code
-    redirect-uri: https://www.example.com/oauth/login/gitee
-    access-token-url: https://gitee.com/oauth/token
-    user-info-url: https://gitee.com/api/v5/user?access_token={access_token}
-  github:
-    client-id: <GITHUB_CLIENT_ID>
-    client-secret: <GITHUB_SECRET>
-    redirect-url: https://www.example.com/oauth/login/github
-    access-token-url: https://github.com/login/oauth/access_token
-    user-info-url: https://api.github.com/user
-  qq:
-    app-id: <QQ_APP_ID>
-    app-key: <QQ_APP_KEY>
-    grant_type: authorization_code
-    redirect-url: https://www.example.com/oauth/login/qq
-    access-token-url: https://graph.qq.com/oauth2.0/token
-    user-openid-url: https://graph.qq.com/oauth2.0/me
-    user-info-url: https://graph.qq.com/user/get_user_info
+#oauth:
+#  gitee:
+#    client-id: <GITEE_CLIENT_ID>
+#    client-secret: <GITEE_SECRET>
+#    grant_type: authorization_code
+#    redirect-uri: https://www.example.com/oauth/login/gitee
+#    access-token-url: https://gitee.com/oauth/token
+#    user-info-url: https://gitee.com/api/v5/user?access_token={access_token}
+#  github:
+#    client-id: <GITHUB_CLIENT_ID>
+#    client-secret: <GITHUB_SECRET>
+#    redirect-url: https://www.example.com/oauth/login/github
+#    access-token-url: https://github.com/login/oauth/access_token
+#    user-info-url: https://api.github.com/user
+#  qq:
+#    app-id: <QQ_APP_ID>
+#    app-key: <QQ_APP_KEY>
+#    grant_type: authorization_code
+#    redirect-url: https://www.example.com/oauth/login/qq
+#    access-token-url: https://graph.qq.com/oauth2.0/token
+#    user-openid-url: https://graph.qq.com/oauth2.0/me
+#    user-info-url: https://graph.qq.com/user/get_user_info
   #B站图片上传链接
 bili-url: https://api.bilibili.com/x/dynamic/feed/draw/upload_bfs
