--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.2.8</version>
+        <relativePath/>
+    </parent>
     <groupId>org.example</groupId>
     <artifactId>blog-backend</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
+        <java.version>17</java.version>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <mysql.version>8.0.23</mysql.version>
@@ -19,20 +25,12 @@
         <fastjson2.version>2.0.25</fastjson2.version>
         <yauaa.version>7.19.1</yauaa.version>
         <sensitive.version>0.2.1</sensitive.version>
-        <oss.version>3.15.1</oss.version>
-        <cos.version>5.6.89</cos.version>
-        <qiniu.version>[7.2.0, 7.2.99]</qiniu.version>
-        <hutool.version>5.8.18</hutool.version>
+        <hutool.version>5.8.26</hutool.version>
         <org.projectlombok.version>1.18.30</org.projectlombok.version>
         <commons-lang3.version>3.12.0</commons-lang3.version>
         <commons-io.version>2.11.0</commons-io.version>
     </properties>
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.8</version>
-        <relativePath/>
-    </parent>
+
     <dependencies>
         <!-- spring boot -->
         <dependency>
@@ -41,10 +39,10 @@
         </dependency>
         <!-- mysql-->
         <dependency>
-        <groupId>mysql</groupId>
-        <artifactId>mysql-connector-java</artifactId>
-            <version>${mysql.version}</version>
-        <scope>runtime</scope>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql.version}</version>
+            <scope>runtime</scope>
         </dependency>
         <!-- thymeleaf -->
         <dependency>
@@ -60,11 +58,11 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>co.elastic.clients</groupId>
-            <artifactId>elasticsearch-java</artifactId>
-            <version>8.11.1</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>co.elastic.clients</groupId>-->
+<!--            <artifactId>elasticsearch-java</artifactId>-->
+<!--            <version>8.11.1</version>-->
+<!--        </dependency>-->
 
         <!-- spring quartz -->
         <dependency>
@@ -188,6 +186,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
+
         <!-- spring mail -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -210,6 +209,16 @@
             <groupId>nl.basjes.parse.useragent</groupId>
             <artifactId>yauaa</artifactId>
             <version>${yauaa.version}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>checker-qual</artifactId>
+                    <groupId>org.checkerframework</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>error_prone_annotations</artifactId>
+                    <groupId>com.google.errorprone</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <!-- 过滤敏感词 -->
         <dependency>
