--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,9 +12,9 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://<DB_HOST>:3306/blog?serverTimezone=Asia/Shanghai&allowMultiQueries=true&rewriteBatchedStatements=true
-    username: <DB_USERNAME>
-    password: <DB_PASSWORD>
+    url: jdbc:mysql://localhost:3306/blog?serverTimezone=Asia/Shanghai&allowMultiQueries=true&rewriteBatchedStatements=true
+    username: root
+    password: <PASSWORD>
     druid:
       # 初始连接数
       initial-size: 10
@@ -52,7 +52,7 @@ spring:
       host: <HOST>
       port: 6379
       # Redis服务器连接密码（默认为空）
-      password:
+      password: <REDIS_PASSWORD>
       # 连接超时时间
       timeout: 10s
       lettuce:
@@ -65,24 +65,36 @@ spring:
           max-idle: 100
           # 连接池中的最小空闲连接
           min-idle: 50
-#  rabbitmq:
-#    host: <RABBITMQ_HOST>
-#    port: 5672
-#    username: <RABBITMQ_USERNAME>
-#    password: <RABBITMQ_PASSWORD>
-#    listener:
-#      simple:
-#        retry:
-#          enabled: true
-#          # 重试间隔时间
-#          initial-interval: 3000
-#          # 最大重试次数
-#          max-attempts: 3
+  #  rabbitmq:
+  #    host: <RABBITMQ_HOST>
+  #    port: 5672
+  #    username: <RABBITMQ_USERNAME>
+  #    password: <RABBITMQ_PASSWORD>
+  #    listener:
+  #      simple:
+  #        retry:
+  #          enabled: true
+  #          # 重试间隔时间
+  #          initial-interval: 3000
+  #          # 最大重试次数
+  #          max-attempts: 3
   # 邮箱配置
   mail:
-    host: smtp.example.com
-    username: <EMAIL_USERNAME>
-    password: <EMAIL_PASSWORD>
+    # 下面这个是QQ邮箱host ， 企业邮箱 : smtp.exmail.qq.com
+    host: smtp.qq.com
+    # tencent mail port  这个是固定的
+    port: 465
+    username: <EMAIL>
+    password: <PASSWORD>
+    test-connection: true
+    properties:
+      mail:
+        smtp:
+          socketFactory:
+            port: 465
+            class: javax.net.ssl.SSLSocketFactory
+          ssl:
+            enable: true
 
 blog:
   url: http:localhost:1314/
@@ -102,12 +114,12 @@ upload:
   local:
     url: https://static.example.com/
     path: /usr/local/upload/
-# minio配置
+  # minio配置
   minio:
-    url: <MINIO_HOST>
+    url: <URL>
     access-key: <MINIO_KEY_ID>
     secret-key: <MINIO_KEY_SECRET>
-    bucket-name: <MINIO_BUCKET>
+    bucket-name: <BUCKET_NAME>
 #  # oss存储
 #  oss:
 #    url: https://your-bucket.oss-region.aliyuncs.com/
