fix：修改统计在线用户方式

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -110,7 +110,7 @@ search:
   mode: mysql
 # 文件上传策略 local、oss、cos
 upload:
-  strategy: local
+  strategy: minio
   local:
     url: https://static.example.com/
     path: /usr/local/upload/
@@ -171,7 +171,7 @@ sa-token:
   # token前缀
   token-prefix: Bearer
   # token有效期，单位s 默认30天, -1代表永不过期
-  timeout: 1800
+  timeout: 86400
   # token临时有效期 (指定时间内无操作就视为token过期) 单位: 秒
   active-timeout: -1
   # 关闭自动续签
