--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jakarta-json.version>2.0.1</jakarta-json.version>
         <druid.version>1.2.24</druid.version>
+        <oss.version>3.15.1</oss.version>
         <saToken.version>1.37.0</saToken.version>
         <fastjson2.version>2.0.25</fastjson2.version>
         <yauaa.version>7.19.1</yauaa.version>
@@ -48,6 +49,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.aliyun.oss</groupId>
+            <artifactId>aliyun-sdk-oss</artifactId>
+            <version>${oss.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
